k8s-config/backend_deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: backend-service-app
spec:
  selector:
    matchLabels:
      app: backend-service-app
  template:
    metadata:
      labels:
        app: backend-service-app
    spec:
      containers:
        - name: backend-service-app
          image: nhlinh2207/freshfoodbackend:1
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service-svc
spec:
  selector:
    app: backend-service-app
  ports:
    - port: 80
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: backend-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: backend-service-app
  ports:
    - port: 8080
      targetPort: 8080
