k8s-config/mysql_statefulset.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0.38
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-initdb
              mountPath: /docker-entrypoint-initdb.d  # Đường dẫn trong container để khởi tạo db với file .sql
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql  # Trong các container mysql, folder /var/lib/mysql được dùng để lưu dữ liệu
      volumes:
        - name: mysql-initdb
          configMap:
            name: mysql-initdb-cm # Lấy dữ liệu từ ConfigMap để liên kết với folder /docker-entrypoint-initdb.d nhằm khởi tạo dữ liệu
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc  # Liên kết dữ liệu persistent storage với foler /var/lib/mysql để tránh mất dữ liệu khi 1 pod mới được khởi tạo

---

apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - port: 3306

---


apiVersion: v1
kind: Service
metadata:
  name: mysql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
