k8s-config/example-ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: example-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
#spec:
#  rules:
#    - host: hello-world.info
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: web
#                port:
#                  number: 8080
#          - path: /v2
#            pathType: Prefix
#            backend:
#              service:
#                name: web2
#                port:
#                  number: 8080

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshfood-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
     - http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service-svc
                port:
                  number: 80
          - path: /linhabc
            pathType: Prefix
            backend:
              service:
                name: web2
                port:
                  number: 8080
